<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot2_bringup</name>
  <version>0.0.0</version>
  <description>Turtlebot2 in ROS 2 Iron overall launch files</description>
  <maintainer email="proan@ingotrobotics.com">Phil Roan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot2_description</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <!--<exec_depend>kobuki_node</exec_depend>-->
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>navigation2</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
